--- a/ts/src/app/app.component.css
+++ b/ts/src/app/app.component.css
@@ -1,7 +1,3 @@
-:host {
-    /* This is equivalent of the 'body' selector of a page. */
-}
-
 div.simple_card {
   padding: 0.25rem .75rem .75rem .75rem;
   margin: .5rem 0 1rem 0;
@@ -13,5 +9,9 @@ div.simple_card {
 }
 
 h1 {
-  padding: 1em;
+  margin-top: 8px;
+}
+
+div.items > div {
+  padding-top: 1em;
 }
