--- a/ts/src/app/app.component.html
+++ b/ts/src/app/app.component.html
@@ -31,7 +31,7 @@
         <b>Writeup URL: </b>
         <a [href]="data.writeupURL">{{data.writeupURL}}</a>
       </div>
-      <button #btn (click)="openDialog(inButton);" style="display: none;"></button>
+      <button #btn (click)="openDialog();" style="display: none;"></button>
     </div>
   </mat-sidenav>
 
