--- a/ts/src/app/help-dialog.html
+++ b/ts/src/app/help-dialog.html
@@ -22,14 +22,14 @@
         will leave something about themselves here.
       </li>
     </ul>
+    Two on-site people are better than those three over skype!
   </div>
 </mat-dialog-content>
 <mat-dialog-actions>
   <div style="display: flex; align-items: baseline">
   <button mat-button (click)="onNoClick()">Close</button>
 
-    <div style="padding-left: 30px; padding-right: 10px;">
-      Talkback:
+    <div style="padding-left: 10px; padding-right: 10px;">
     </div>
   <a href="https://gitter.im/icfpc-meeting-point/Lobby?utm_source=share-link&utm_medium=link&utm_campaign=share-link"
      style="position: relative; top: 10px; padding-left: 10px;">
