--- a/ts/src/app/edit-team-dialog.html
+++ b/ts/src/app/edit-team-dialog.html
@@ -12,14 +12,6 @@
     <input matInput #teamName [(ngModel)]="data.teamName" cdkFocusInitial
            placeholder="Team name {{(teamName.value?.length || 0) > 0 ? '':'(e.g MegaWinners)'}}" required>
   </mat-form-field>
-  <div *ngIf="teamName.invalid && (teamName.dirty || teamName.touched)"
-       class="alert alert-danger">
-
-    <div *ngIf="teamName.errors.required">
-      Name is required.
-    </div>
-
-  </div>
 
   <mat-form-field>
     <input #contactName matInput [(ngModel)]="data.contactName"
@@ -54,7 +46,7 @@
 
   <button *ngIf="data.editMode" mat-button (click)="deleteTeam()">Delete team</button>
 
-  <button mat-button [mat-dialog-close]="data">
+  <button mat-button (click)="validateAndClose()">
     <span *ngIf="data.editMode">
       Update team
     </span>
