--- a/ts/src/app/help-dialog.html
+++ b/ts/src/app/help-dialog.html
@@ -5,10 +5,11 @@
     <div style="font-weight: bold">What is it</div>
     <br>
     <div>Can't find team to join? Need more team mates? Announce here.</div>
+    <div>Want to catch an ICFPC moment long after event vanishes? Announce here.</div>
     <br/>
     <div style="font-weight: bold">How</div>
     <br>
-    <div>Click on map in the city where you need to link with people and create single-person team first. Someone will find and contact you.
+    <div><b>CLICK ON MAP</b> in the city where you need to link with people and create single-person team first. Someone will find and contact you.
       Or maybe there's already a team.</div>
     <br/>
     <div style="font-weight: bold">Why?</div>
